@@ -144,6 +144,7 @@ lib/mosh/shell/repl.ss \
 lib/mosh/dbd/mysql.ss  \
 lib/mosh/test.ss   \
 lib/mosh/pp.ss     \
+lib/mosh/control.ss     \
 lib/mosh/config.ss \
 lib/clos/core.ss  lib/clos/helpers.ss  lib/clos/introspection.ss  lib/clos/slot-access.ss  lib/clos/user.ss \
 lib/clos/bootstrap/generic-functions.ss  lib/clos/bootstrap/standard-classes.ss \
